--- a/public/global.css
+++ b/public/global.css
@@ -3,29 +3,37 @@ html, body {
 	width: 100%;
 	height: 100%;
 }
-
 body {
 	color: #333;
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: 'IBM Plex Sans Thai', BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
-
 
 /*  
 Override IBM Component style here
 */
 
+:root {
+	--main-font: 'IBM Plex Sans Thai';
+}
+
 .bx--label {
-	font-family: 'IBM Plex Sans Thai';
+	font-family: var(--main-font);
 }
 .bx--file--label {
-	font-family: 'IBM Plex Sans Thai';
+	font-family: var(--main-font);
 }
 .bx--label-description {
-	font-family: 'IBM Plex Sans Thai';
+	font-family: var(--main-font);
 }
 .bx--form-item {
 	margin-top: 30px;
+}
+.bx--btn--primary {
+	font-family: var(--main-font)'
+}
+.bx--tag {
+	font-family: var(--main-font);
 }
