feature: add ImageUploader component, also add tests, but skip for now since it got problem with jsdom and carbon compoonent

--- a/public/global.css
+++ b/public/global.css
@@ -32,8 +32,11 @@ Override IBM Component style here
 	margin-top: 30px;
 }
 .bx--btn--primary {
-	font-family: var(--main-font)'
+	font-family: var(--main-font);
 }
 .bx--tag {
+	font-family: var(--main-font);
+}
+.bx--btn {
 	font-family: var(--main-font);
 }
