feat: change login to passwordless, we gonna use otp

--- a/public/global.css
+++ b/public/global.css
@@ -50,3 +50,6 @@ Override IBM Component style here
 .bx--text-input-wrapper--readonly input.bx--text-input {
 	background: var(--main-background-color);
 }
+.bx--text-input {
+	font-family: var(--main-font);
+}
