--- a/public/global.css
+++ b/public/global.css
@@ -53,3 +53,6 @@ Override IBM Component style here
 .bx--text-input {
 	font-family: var(--main-font);
 }
+.bx--form__helper-text {
+	font-family: var(--main-font);
+}
