refactor: move some form to lab form component

--- a/public/global.css
+++ b/public/global.css
@@ -60,3 +60,6 @@ Override IBM Component style here
 .bx--list-box__label {
 	font-family: var(--main-font);
 }
+.bx--date-picker__input {
+	font-family: var(--main-font) !important;
+}
