--- a/public/global.css
+++ b/public/global.css
@@ -4,7 +4,6 @@ html, body {
 	height: 100%;
 }
 body {
-	color: #333;
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
@@ -17,7 +16,7 @@ Override IBM Component style here
 
 :root {
 	--main-font: 'IBM Plex Sans Thai';
-	--main-background-color: #f4f4f4;
+	--main-background-color: #262626;
 }
 .bx--label {
 	font-family: var(--main-font);
